<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.view.LoginActivity"
        android:background="@color/colorPrimaryDark">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_android"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_account"
            android:theme="@style/customLineColor"
            app:hintTextAppearance="@style/hintAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/account"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/mTvAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_password"
            android:theme="@style/customLineColor"
            app:hintTextAppearance="@style/hintAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/ti_account">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/mTvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/mBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorLightDark"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintTop_toBottomOf="@+id/ti_password" />

    <TextView
            android:id="@+id/mTvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/go_regist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mBtnLogin" />

</android.support.constraint.ConstraintLayout>